manifests/dashboard.yaml
# See: https://github.com/kubernetes/dashboard/blob/master/docs/user/access-control/creating-sample-user.md
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    name: dashboard
